--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-reporter-githubchecks",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "githubchecks TestCafe reporter plugin.",
   "repository": "https://github.com/sovrin/testcafe-reporter-githubchecks",
   "author": {
@@ -17,7 +17,7 @@
     "plugin"
   ],
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "github-app": "latest"
   }
 }
